Adjust filters and add title

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -126,7 +126,7 @@ $description-color: $font-secondary-color;
     box-shadow: none;
     background: $surface-color;
     position: relative;
-    margin: 0 0 25px 0;
+    //margin: 0 0 25px 0;
 
     &:hover {
       & .me-card__similar {
