--- a/web/app/assets/stylesheets/components/me-follow-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-follow-chip-set.scss
@@ -3,22 +3,22 @@
 .me-follow-chip-set {
 
   & .mdc-chip {
-    background: none;
-    border: 1px solid $border-color;
+    background: darken($surface-color, 5%);
+    //border: 1px solid $border-color;
 
     &__text {
-      transition: color 0.4s ease;
+      transition: color 0.3s ease-in;
     }
 
     & .mdc-chip__icon--leading {
-      width: 0;
-      opacity: 0;
+      //width: 0;
+      opacity: 0.5;
       //transition: opacity 0.4s ease;
     }
 
     &:hover {
       & .mdc-chip__icon--leading {
-        width: 18px;
+        //width: 18px;
         opacity: 1;
       }
     }
@@ -33,7 +33,7 @@
 
       & .mdc-chip__icon--leading {
         color: $brand-color-in-white;
-        width: 18px;
+        //width: 18px;
         opacity: 1;
         //margin: 0 -4px 0 4px;
       }
