--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -5,48 +5,49 @@
          data-target="section.section"
          data-section-items-count="<%= detail[:events_in_collection] if detail %>"
          id="<%= identifier %>">
-      <h2 class="mdc-typography--<%= type == :large ? 'headline4' : 'headline5' %>">
-        <%= titles[:principal] %>
-      </h2>
-      <div class="me-feed__divider"></div>
-      <% if filters %>
-        <div class="me-filter"
-             data-controller="filter"
-             data-filter-section-identifier="<%= identifier %>"
-             data-filter-title="<%= titles[:principal] %>"
-             data-target="filter.filterContainer section.filter">
-          <% if filters[:categories] && items[:filters] %>
-            <%= titles[:categories] %>
-            <%= render partial: 'feeds/filter', locals: {
-                initial_filters:              items[:categories],
-                params_filters:               params[:categories],
-                filters_that_exist_in_events: items[:categories],
-                icon_type:                    'filter_none',
-                type:                         'categories'
-            } %>
-          <% end %>
-          <% if filters[:kinds] && params[:categories] && params[:kinds] && items[:kinds] %>
-            <%= titles[:kinds] %>
-            <%= render partial: 'feeds/filter', locals: {
-                initial_filters:              items[:kinds],
-                params_filters:               params[:kinds],
-                filters_that_exist_in_events: items[:kinds],
-                icon_type:                    'filter_list',
-                type:                         'kinds'
-            } %>
-          <% end %>
-          <% if filters[:ocurrences] && items[:ocurrences] %>
-            <%= titles[:ocurrences] %>
-            <%= render partial: 'feeds/filter', locals: {
-                initial_filters:              items[:ocurrences],
-                params_filters:               params[:ocurrences],
-                filters_that_exist_in_events: items[:ocurrences],
-                icon_type:                    'today',
-                type:                         'ocurrences'
-            } %>
-          <% end %>
-        </div>
-      <% end %>
+      <div class="me-feed__section-head">
+        <h2 class="mdc-typography--<%= type == :large ? 'headline4' : 'headline5' %>">
+          <%= titles[:principal] %>
+        </h2>
+        <% if filters %>
+          <div class="me-filter"
+               data-controller="filter"
+               data-filter-section-identifier="<%= identifier %>"
+               data-filter-title="<%= titles[:principal] %>"
+               data-target="filter.filterContainer section.filter">
+            <% if filters[:categories] && items[:filters] %>
+              <%= titles[:categories] %>
+              <%= render partial: 'feeds/filter', locals: {
+                  initial_filters:              items[:categories],
+                  params_filters:               params[:categories],
+                  filters_that_exist_in_events: items[:categories],
+                  icon_type:                    'filter_list',
+                  type:                         'categories'
+              } %>
+            <% end %>
+            <% if filters[:kinds] && params[:categories] && params[:kinds] && items[:kinds] %>
+              <%= titles[:kinds] %>
+              <%= render partial: 'feeds/filter', locals: {
+                  initial_filters:              items[:kinds],
+                  params_filters:               params[:kinds],
+                  filters_that_exist_in_events: items[:kinds],
+                  icon_type:                    'filter_list',
+                  type:                         'kinds'
+              } %>
+            <% end %>
+            <% if filters[:ocurrences] && items[:ocurrences] %>
+              <%= titles[:ocurrences] %>
+              <%= render partial: 'feeds/filter', locals: {
+                  initial_filters:              items[:ocurrences],
+                  params_filters:               params[:ocurrences],
+                  filters_that_exist_in_events: items[:ocurrences],
+                  icon_type:                    'today',
+                  type:                         'ocurrences'
+              } %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
       <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
           <% unless items.empty? %>
@@ -55,7 +56,7 @@
             } %>
 
             <%= render partial: 'components/collection/similar', locals: {
-                events: items[:events],
+                events:     items[:events],
                 identifier: identifier
             } %>
 
