--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -78,7 +78,7 @@
                  locals:  {
                      items:      @items[:follow],
                      titles:     {
-                         principal: "Seguidos"
+                         principal: "Eventos de tópicos que você segue"
                      },
                      identifier: 'follow',
                      type:       :large,
