--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -59,6 +59,7 @@ $gutter: 6px;
 
   & .mdc-typography--headline6 {
     margin: 0;
+    font-size: 1.3em;
     font-weight: 800;
   }
 
@@ -112,7 +113,7 @@ $gutter: 6px;
     }
 
     &__title {
-      color: $font-tertiary-color;
+      color: $font-primary-color;
       font-size: 13px;
       margin: 4px 0 0 0;
       font-weight: 400;
@@ -144,6 +145,12 @@ $gutter: 6px;
     & .mdc-card__media {
       border-radius: 3px;
       overflow: hidden;
+      transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
+
+      &:hover {
+        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
+      }
     }
   }
 
