--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -7,7 +7,7 @@
   left: 6px;
   z-index: 1;
   will-change: transform;
-  color: $icon-dark-color;
+  color: $icon-light-color;
 
   @include mdc-layout-grid-media-query_("phone") {
     display: none;
@@ -37,10 +37,11 @@
     width: 48px;
     height: 48px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
     cursor: pointer;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__label {
