--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -46,7 +46,8 @@
                     d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
                 </svg>
               </div>
-              <a href="<%= event.url %>">
+              <a href="<%= event.url %>"
+                 title="<%= event.details_name %>">
                 <div class="me-card__date" data-target="favorite-events.date">
                   <%= event.day_of_week['decorator'] %>
                 </div>
@@ -54,8 +55,9 @@
                   <div class="me-card__overlay"
                        data-target="favorite-events.overlay"></div>
                 </div>
-                <div class="me-card__title mdc-card__title" data-target="favorite-events.title">
-                  <%= limit_name_size event.details_name, 30 %>
+                <div class="me-card__title mdc-card__title"
+                     data-target="favorite-events.title">
+                  <%= limit_name_size event.details_name, 32 %>
                 </div>
               </a>
             </div>
