--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -30,7 +30,7 @@
     <div class="me-favorite__list mdc-layout-grid"
          data-target="favorite.list">
       <div class="mdc-layout-grid__inner">
-        <% favorited_events.each do |event| %>
+        <% saved_events.each do |event| %>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
             <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
                  data-action="mouseover->favorite-events#showEventDetails"
