--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -77,18 +77,18 @@
     <section>
       <%= render partial: "components/collection/collection",
                  locals:  {
-                     items:      @items[:suggestions],
+                     items:      @items[:user_suggestions],
                      titles:     {
                          principal: "Sugestões"
                      },
-                     identifier: 'suggestions',
+                     identifier: 'user-suggestions',
                      type:       :large,
                      filters:    {
                          categories: true,
                          ocurrences: true,
                          kinds:      false
                      },
-                     detail:     @items[:suggestions][:detail]
+                     detail:     @items[:user_suggestions][:detail]
                  } %>
 
     </section>
