Refactor in JS controllers to remove Detached DOM elements unecessaries

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
         href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Roboto:300,400,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
   <%= Gon::Base.render_data %>
   <%#= javascript_include_tag request.protocol + request.host + (ENV['IS_DOCKER'] == 'true' ? "/bot/embed.js" : ":3030/embed.js"), defer: true %>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js'
-          data-turbolinks-track='reload'></script>
-  <script src='https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js' data-turbolinks-track='reload'></script>
+<!--  <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js' data-turbolinks-track='reload'></script>-->
+<!--  <script src='https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js' data-turbolinks-track='reload'></script>-->
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%#= javascript_include_tag 'bot/client', 'data-turbolinks-track': 'reload' %>
